Removed extra delegation check for subscription, fixed try button visibility on header stick to top (#643)
Removed extra delegation check for a subscription
Fixed try button visibility on header stick to top (close #559)

--- a/src/themes/website/styles/docs.scss
+++ b/src/themes/website/styles/docs.scss
@@ -233,7 +233,7 @@ pre {
     top: 0;
     bottom: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 1050;
     @media (min-width: $breakpoint-md) {
         max-width: 600px;
     }
